github actions upload

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.port=8080
 server.address=0.0.0.0
 
 # Datasource (PostgreSQL)
-# spring.datasource.url=jdbc:postgresql://localhost:5432/technical_test
-# spring.datasource.username=postgres
-# spring.datasource.password=1598753
-# spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/technical_test
+spring.datasource.username=postgres
+spring.datasource.password=1598753
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # para base de datos en docker
 spring.datasource.url=${SPRING_DATASOURCE_URL}
